AS#148310367971238, Bug: Grey section visible on my challenges page -- Fixed, styles from topcoder-app-r conflicted with the style in my-challenges page

--- a/assets/css/my-challenges/my-challenges.scss
+++ b/assets/css/my-challenges/my-challenges.scss
@@ -23,7 +23,7 @@
     text-align: center;
   }
 
-  section.load-more {
+  section.load-more-section {
     min-height: auto;
   }
 
